# cmakedemo

./: .gitattributes  .gitignore  README.md  eg-win32.ia32.sln  gitnotes.txt  readme.txt
_commonfiles/: cbuild.js  cmakedemo.sublime-project  cmakedemo.sublime-workspace  copycommonfiles.js
_commonfiles/cmakemodules/: EgFindModule.cmake  EgLoadPackageDetails.cmake  EgTimestamp.cmake  Findegcore.cmake  Findegfn.cmake
_commonfiles/project/apps/: CMakeCPack.cmake
_commonfiles/project/apps/windows/: project.vcproj.user.in
_commonfiles/project/libs/: CMakeCPack.cmake  Doxyfile.in
_commonfiles/project/libs/src/: CMakeLists.txt
egcore/: CMakeLists-Local.cmake  README.txt  version.in.h
egcore/include/egcore/: core.h  export.h
egcore/include/egcore/private/: pcore.h
egcore/resources/: readme.txt
egcore/src/: core.c  egcore.h  eginternal.h
egcore/src/dochdrs/: api.h  egdoc.h  overview.h
egcore/src/dochdrs/overview/: introduction.h  thirdparty.h
egcoretester/: CMakeLists-Local.cmake  CMakeLists.txt  README.txt
egcoretester/resources/: runtester.js  runtestermod.js
egcoretester/src/: CMakeLists.txt  buildconfig.in.h  main.c
egfn/: CMakeLists-Local.cmake  README.txt  version.in.rc
egfn/include/egfn/: export.h  fn.h
egfn/include/egfn/private/: pfn.h
egfn/resources/: readme.txt
egfn/src/: egfn.h  eginternal.h  fn.c
egfn/src/dochdrs/: api.h  egdoc.h  overview.h
egfn/src/dochdrs/overview/: introduction.h  thirdparty.h
egfntester/: CMakeLists-Local.cmake  README.txt  copyright.txt
egfntester/resources/: runtester.js
egfntester/src/: main.c
